Added slice to span

--- a/BenchmarkDotNet.Artifacts/results/PrettifyTests-report.html
+++ b/BenchmarkDotNet.Artifacts/results/PrettifyTests-report.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 <meta charset='utf-8' />
-<title>PrettifyTests-20240629-173731</title>
+<title>PrettifyTests-20240629-180918</title>
 
 <style type="text/css">
 	table { border-collapse: collapse; display: block; width: 100%; overflow: auto; }
@@ -22,11 +22,12 @@ Intel Core i7-7500U CPU 2.70GHz (Kaby Lake), 1 CPU, 4 logical and 2 physical cor
 <pre><code></code></pre>
 
 <table>
-<thead><tr><th>Method      </th><th>Mean</th><th>Error</th><th>StdDev</th><th>Median</th><th>Gen0</th><th>Allocated</th>
+<thead><tr><th>Method      </th><th>Mean</th><th>Error</th><th>StdDev</th><th>Gen0</th><th>Allocated</th>
 </tr>
-</thead><tbody><tr><td>PrettifyNameString</td><td>563.68 ns</td><td>32.584 ns</td><td>92.963 ns</td><td>523.05 ns</td><td>0.3901</td><td>816 B</td>
-</tr><tr><td>PrettifyNameROS</td><td>145.58 ns</td><td>4.461 ns</td><td>12.508 ns</td><td>145.82 ns</td><td>0.1452</td><td>304 B</td>
-</tr><tr><td>PrettifyNameSTACK</td><td>71.68 ns</td><td>1.497 ns</td><td>1.947 ns</td><td>71.66 ns</td><td>0.0381</td><td>80 B</td>
+</thead><tbody><tr><td>PrettifyNameString</td><td>495.77 ns</td><td>9.685 ns</td><td>13.257 ns</td><td>0.3901</td><td>816 B</td>
+</tr><tr><td>PrettifyNameROS</td><td>142.85 ns</td><td>6.412 ns</td><td>18.396 ns</td><td>0.1452</td><td>304 B</td>
+</tr><tr><td>PrettifyNameSTACK</td><td>83.03 ns</td><td>4.092 ns</td><td>11.806 ns</td><td>0.0381</td><td>80 B</td>
+</tr><tr><td>PrettifyNameSLICE</td><td>148.58 ns</td><td>3.049 ns</td><td>6.945 ns</td><td>0.1452</td><td>304 B</td>
 </tr></tbody></table>
 </body>
 </html>
